--- a/packages/web/src/assets/main.css
+++ b/packages/web/src/assets/main.css
@@ -6,13 +6,14 @@ body {
     display: inline-block;
     position: relative;
     width: 80px;
-    height: 80px;
+    height: 18px;
+    margin-left: 8px;
 }
 .lds-ellipsis div {
     position: absolute;
-    top: 33px;
-    width: 13px;
-    height: 13px;
+    top: 10px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     background: #fff;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
