--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,13 @@ body {
   margin: 0;
 }
 
-.search {
+.icon {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+}
+
+.button-icon {
   width: 38px;
   height: 38px;
   display: flex;
@@ -17,29 +23,32 @@ body {
   align-items: center;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  color: rgb(25, 118, 210);
 }
 
-.search .icon {
-  width: 24px;
-  height: 24px;
-  color: rgba(25, 118, 210, 0.8);
+.flex-row {
+  display: flex;
+  flex-flow: row nowrap;
 }
 
-.appbar {
-  height: 78px;
-  width: 100%;
-  position: sticky;
-  top: 0;
-  z-index: 1;
+.flex-column {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.flex-item-stand {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+}
+
+.flex-item-stretch {
+  flex: 1;
+}
+
+.flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(231, 235, 240);
-  transition: all 0.1s ease-in-out;
-}
-
-.appbar--float {
-  background: #fff;
-  box-shadow: 0px 2px 3px 1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
-    0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
