--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -1,33 +1,27 @@
-.filter-menu {
-  position: fixed;
-  width: 100%;
-  height: 75%;
-  z-index: 100;
-  top: 0;
-  background: #fff;
-  box-shadow: 0px 2px 3px 1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
-    0px 1px 3px 0px rgb(0 0 0 / 12%);
-}
-
-.filter-menu .pane {
+.filter-pane {
   position: relative;
-  height: 100%;
 }
 
-.filter-menu .pane::after {
+.filter-pane h1 {
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  border-bottom: 1px solid rgb(235, 235, 235);
+  margin: 0;
+  padding: 12px;
+}
+
+.button-icon.button-close {
+  background: none;
+  border: none;
   position: absolute;
-  bottom: 0;
-  left: 16px;
-  width: 32px;
-  height: 32px;
-  z-index: 101;
-  background: #fff;
-  transform: translateY(100%) rotate(90deg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '\00AB';
-  font-size: 24px;
-  box-shadow: 4px -2px 3px 1px rgb(0 0 0 / 20%), 2px 2px 2px 0px rgb(0 0 0 / 14%),
-    3px 2px 3px 0px rgb(0 0 0 / 12%);
+  top: 3px;
+  left: 2px;
+}
+
+.amount-input {
+  display: grid;
+  grid: auto-flow / 1fr auto 1fr;
+  grid-gap: 12px;
+  padding: 0 18px;
 }
