chore: update input and filter pane's UIs

--- a/src/components/Appbar.css
+++ b/src/components/Appbar.css
@@ -1,6 +1,16 @@
 .curtain {
-  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  transition: all 0.4s ease-in;
+}
+
+.curtain--in {
   z-index: 101;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .appbar {
@@ -24,8 +34,15 @@
 }
 
 .appbar_filter {
-  box-shadow: 0px 2px 3px 1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
-    0px 1px 3px 0px rgb(0 0 0 / 12%);
+  height: 100vh;
+  position: fixed;
+  width: 100%;
+  z-index: 102;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  overflow: hidden;
 }
 
 .appbar_filter_footer {
@@ -34,4 +51,8 @@
 
 .appbar_filter_content {
   background: #fff;
+}
+
+.appbar_filter--in {
+  transform: translateY(28px);
 }
