--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -23,5 +23,42 @@
   display: grid;
   grid: auto-flow / 1fr auto 1fr;
   grid-gap: 12px;
-  padding: 0 18px;
+  padding: 24px 18px 24px 18px;
+}
+
+.date-picker {
+  display: grid;
+  grid-gap: 12px;
+  grid-auto-flow: column;
+  overflow-x: auto;
+  overflow-y: hidden;
+  font-size: 13px;
+  font-weight: 500;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.date-picker .group {
+  box-sizing: border-box;
+  display: grid;
+  grid: auto-flow / repeat(7, 1fr);
+}
+
+.group button {
+  background: none;
+  border: none;
+}
+
+.group div {
+  text-align: center;
+  padding: 12px 4px 4px;
+  box-sizing: content-box;
+  color: rgba(113, 113, 113, 0.5);
+}
+
+.group .dimmed {
+  color: rgba(113, 113, 113, 0.5);
+}
+
+.group .selected {
+  background: #ff385c;
 }
