--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -1,5 +1,36 @@
 .filter-pane {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 28px);
+}
+
+.filter-pane .body {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.filter-pane footer {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgb(235, 235, 235);
+  padding: 0 18px;
+}
+
+.filter-pane footer a {
+  margin-right: auto;
+  text-decoration: underline;
+}
+
+.filter-pane footer button {
+  height: 38px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: none;
 }
 
 .filter-pane h1 {
@@ -61,4 +92,14 @@
 
 .group .selected {
   background: #ff385c;
+}
+
+.filter-chip {
+  position: relative;
+  padding: 8px;
+  margin-right: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
 }
