--- a/src/components/Appbar.css
+++ b/src/components/Appbar.css
@@ -25,6 +25,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 8px;
+  box-sizing: border-box;
+  gap: 8px;
 }
 
 .appbar.appbar--float {
