--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -96,10 +96,10 @@
 
 .filter-chip {
   position: relative;
-  padding: 8px;
-  margin-right: 16px;
+  padding: 6px;
   border: 1px solid rgba(0, 0, 0, 0.12);
-  border-radius: 16px;
+  border-radius: 6px;
   display: flex;
   align-items: center;
+  height: 25px;
 }
