--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,40 @@
+.card-pane {
+  background: rgb(255, 244, 229);
+  position: relative;
+  margin: 8px;
+  border-radius: 4px;
+}
+
+.card-sheet {
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.card-sheet button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  height: 100%;
+  width: 80px;
+  background: none;
+}
+
 .card {
   background: rgb(255, 255, 255);
   border-radius: 4px;
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
     0px 1px 3px 0px rgb(0 0 0 / 12%);
   padding: 16px;
-  margin: 8px;
+  position: relative;
+  z-index: 2;
 }
 
 .card .reason {
