--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -42,7 +42,7 @@
   padding: 12px;
 }
 
-.button-icon.button-close {
+.button.button-close {
   background: none;
   border: none;
   position: absolute;
