--- a/src/App.css
+++ b/src/App.css
@@ -366,7 +366,7 @@ body {
   fill: currentColor;
 }
 
-.button-icon {
+.button {
   width: 38px;
   height: 38px;
   display: flex;
@@ -377,6 +377,12 @@ body {
   cursor: pointer;
   color: rgb(25, 118, 210);
   background: rgb(255, 244, 229);
+}
+
+.icon-button {
+  border: none;
+  background: none;
+  border-radius: none;
 }
 
 .flex-row {
@@ -423,4 +429,39 @@ body {
 button svg {
   color: rgb(25, 118, 210);
   flex-shrink: 0;
+}
+
+.fly-enter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translate3d(100%, 0, 0);
+  transition: transform 350ms ease;
+}
+
+.backward .fly-enter {
+  transform: translate3d(-100%, 0, 0);
+}
+
+.fly-enter.fly-enter-active {
+  transform: translate3d(0, 0, 0);
+}
+
+.fly-exit {
+  transform: translate3d(0, 0, 0);
+  transition: transform 350ms ease;
+}
+
+.backward .fly-exit.fly-exit-active {
+  transform: translate3d(100%, 0, 0);
+}
+
+.fly-exit.fly-exit-active {
+  transform: translate3d(-100%, 0, 0);
+}
+
+.fly-exit.fly-exit-active.on-duty {
+  transform: translate3d(100%, 0, 0);
 }
