--- a/src/components/FilterMenu.css
+++ b/src/components/FilterMenu.css
@@ -31,11 +31,11 @@
   display: grid;
   grid: auto-flow / 1fr auto 1fr;
   grid-gap: 12px;
-  margin: 24px 18px 60px 18px;
+  margin: 18px;
 }
 
 .date-input {
-  margin: 60px 0;
+  margin: 18px 0;
 }
 
 .date-picker {
