--- a/src/components/ComboSelect.css
+++ b/src/components/ComboSelect.css
@@ -7,7 +7,7 @@
 }
 
 .combo-select input {
-  padding: 26px 0px 12px 16px;
+  padding: 26px 2px 12px 16px;
   width: 100%;
   box-sizing: border-box;
   border-radius: 4px;
@@ -19,8 +19,8 @@
 .combo-select .button-sheet {
   background: white;
   position: absolute;
-  top: 18px;
-  right: 6px;
+  bottom: 2px;
+  right: 2px;
   width: 40px;
   height: 40px;
   display: flex;
