--- a/src/views/TransactionMutation.css
+++ b/src/views/TransactionMutation.css
@@ -6,7 +6,7 @@
 
 .mutating {
   background: white;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -25,5 +25,4 @@
 
 .mutating .body {
   flex: 1;
-  overflow-y: auto;
 }
