chore: fix bugs, and add notification after creating/updating transaction

--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -22,6 +22,11 @@
   color: rgb(255, 255, 255);
 }
 
+.message-sheet.success {
+  background: rgb(46, 125, 50);
+  color: rgb(255, 255, 255);
+}
+
 .message-sheet p {
   margin: 0;
 }
