--- a/src/components/Appbar.css
+++ b/src/components/Appbar.css
@@ -17,16 +17,11 @@
   width: 100%;
   position: sticky;
   top: 0;
-  height: 78px;
   z-index: 3;
   background-color: white;
   transition: all 0.1s ease-in-out;
-  display: flex;
-  display: flex;
-  align-items: center;
-  padding: 0 8px;
+  padding: 8px;
   box-sizing: border-box;
-  gap: 8px;
   overflow-x: auto;
 }
 
@@ -70,5 +65,19 @@
   flex: 1;
   display: flex;
   flex-flow: row nowrap;
+  gap: 8px;
+}
+
+.appbar button {
+  height: 38px;
+  width: 38px;
+}
+
+.appbar button.exit {
+  margin-left: auto;
+}
+
+.appbar .button-group {
+  display: flex;
   gap: 8px;
 }
