chore: clean code, fix bugs

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -48,11 +48,11 @@
 .input-adds-in {
   position: absolute;
   top: 26px;
-  left: 14px;
+  left: 15px;
   color: var(--secondary-text-color);
 }
 
-/* .text-input .tag-list {
+.input .tag-list {
   padding: 26px 16px 12px 16px;
   border: 1px solid var(--border-color);
   border-radius: 4px;
@@ -63,9 +63,9 @@
   min-height: 38px;
 }
 
-.text-input .tag-list .tag {
+.input .tag-list .tag {
   display: flex;
   align-items: center;
   padding: 8px;
   background: rgb(239, 239, 239);
-} */
+}
