refractor: add zustand to sign-in pages and sign-out

--- a/src/Theme.css
+++ b/src/Theme.css
@@ -3,6 +3,9 @@
   --sheet-background-color: white;
   --button-background-color: rgb(255, 244, 229);
   --dimmed-background-color: rgb(229, 246, 253, 0.5);
+  --notification-background-color: rgb(35, 35, 36);
+  --success-background-color: rgb(46, 125, 50);
+  --success-background-color: rgb(46, 125, 50);
 
   --border-color: rgb(213, 213, 213);
   --button-border-color: rgba(0, 0, 0, 0.12);
@@ -13,4 +16,7 @@
   --error-text-color: rgb(239, 83, 80);
   --button-text-color: #1976d2;
   --disabled-color: rgba(0, 0, 0, 0.3);
+  --notification-text-color: white;
+  --sucess-text-color: white;
+  --error-text-color: white;
 }
