--- a/src/views/Appbar.css
+++ b/src/views/Appbar.css
@@ -66,6 +66,7 @@
   display: flex;
   flex-flow: row nowrap;
   gap: 8px;
+  margin-top: 12px;
 }
 
 .appbar button {
@@ -80,4 +81,16 @@
 .appbar .button-group {
   display: flex;
   gap: 8px;
+}
+
+.filter-chip {
+  position: relative;
+  padding: 6px 0 6px 6px;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  height: 25px;
+  flex-shrink: 0;
+  gap: 4px;
 }
